--- a/project/config.yaml
+++ b/project/config.yaml
@@ -3,7 +3,7 @@
 common:
   saveLog: false # 是否记录日志到文件[True/False]
   workersPerProject: 1 # 多线程，同时翻译的文件数量（单文件只能单线程）
-  language: "ja2zh-cn" # 源语言2(to)目标语言。[zh-cn/zh-tw/en/ja/ko/ru/fr]
+  language: "ja2zh-cn"
   linebreakSymbol: "\r\n" # 这个项目在json中使用的换行符，找问题和自动修复时用到，不影响翻译。
   skipRetry: false # 开启则解析结果出错时跳过循环重试，直接用"Fail Translation"占位。[True/False]
   retranslFail: false # 重启时重翻所有"Fail Translation"的句子。[True/False]
@@ -35,33 +35,21 @@ dictionary:
   # 所有字典、字典内词条将按顺序从上到下替换
   # 译前字典
   preDict:
-    - (project_dir)项目字典_译前.txt # (project_dir)代表字典在项目文件夹
+    - (project_dir)dict_pre.txt # (project_dir)代表字典在项目文件夹
   # GPT 字典
   gpt.dict:
-    - (project_dir)项目GPT字典.txt
+    - (project_dir)dict_gpt.txt
   # 译后字典
   postDict:
-    - (project_dir)项目字典_译后.txt
+    - (project_dir)dict_after.txt
 # 翻译后端相关设置
 backendSpecific:
   GPT35: # GPT3.5 API
     tokens:
-      - token: sk-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-        endpoint: https://api.openai.com # OpenAI API请求的域名，使用转发或第三方API时修改
-      - token: sk-bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
+      - token: sk-e615ad13a6144534b3c6e2b3c9053365
         endpoint: ""
-    defaultEndpoint: https://api.openai.com # 默认 API 端点，一般不修改
-    rewriteModelName: "" # 强制使用指定的模型型号，一般不修改
-  GPT4: # GPT4 API
-    tokens:
-      - token: sk-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-        endpoint: https://api.openai.com # 使用转发或第三方API时修改
-    defaultEndpoint: https://api.openai.com # 一般不修改
-    rewriteModelName: "" # 强制使用指定的模型型号，可用于claude3-opus第三方中转
-  bingGPT4: # NewBing API
-    cookiePath:
-      - newbing_cookies/cookie1.json # 你的 cookies 文件，相对于项目目录
-      - newbing_cookies/cookie2.json # 你的 cookies 文件2，会自动切换
+    defaultEndpoint: https://api.deepseek.com
+    rewriteModelName: "deepseek-chat"
   Sakura: # Sakura API
     endpoint: http://127.0.0.1:8989 # Sakura API请求的域名
 # 自动问题分析配置
